--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
   margin: 30px 0;
+  text-align: center;
+}
+
+.App .container {
+  background-color: rgb(176, 156, 196);
+  padding: 30px;
+  border-radius: 4px;
 }
