--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 .App {
-  margin: 30px 0;
-  /* text-align: center; */
   background-color: #e5e7eb;
 }
 
 .App .container {
   background-color: rgb(176, 156, 196);
-  padding: 30px;
+  padding: 60px 30px;
   border-radius: 4px;
+}
+
+.App .App-header {
+  text-align: center;
+  padding: 0 0 30px;
 }
 
 /* 
