Application base styling

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   padding: 0 0 30px;
 }
 
+.App h1 {
+  font-size: calc(2.375rem + 1.5vw);
+  font-weight: 600;
+}
+
 /* 
 Colours: 
 #1E3A8A //Deep Blue
