--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,10 +1,14 @@
 .Dictionary section {
   background-color: #fff;
-  padding: 20px;
+  padding: 30px 20px;
   margin: 20px 0;
   border-radius: 8px;
-  box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.3),
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2),
     -2px -2px 5px rgba(255, 255, 255, 0.2);
+}
+
+.Dictionary h4 {
+  margin-bottom: 20px;
 }
 
 .Dictionary input {
@@ -16,7 +20,17 @@
 }
 
 .Dictionary button {
+  font-size: 1.2rem;
+  font-weight: 500;
   padding: 6px 30px;
+  color: #fff;
+  background-color: #9333ea;
+  transition: all 150ms ease-in-out;
+}
+
+.Dictionary button:hover {
+  color: #fff;
+  background-color: #6d28d9;
 }
 
 .Dictionary .hint {
