--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,32 @@
 .App {
-  background-color: #e5e7eb;
+  /* background-color: #e5e7eb; */
+  /* background-color: #f9fafb; */
+  background-color: #dfebe5;
+  /* color: #111827; */
+  /* color: #000; */
 }
 
 .App .container {
-  background-color: rgb(176, 156, 196);
+  /* background-color: #1e3a8a; */
+  background-color: #065f46;
+  max-width: 960px;
   padding: 60px 30px;
+  border: 3px double #facc15;
   border-radius: 4px;
 }
 
 .App .App-header {
   text-align: center;
   padding: 0 0 30px;
+  color: #fff;
+  /* color: #111827; */
+  /* color: #374151; */
 }
 
 .App h1 {
   font-size: calc(2.375rem + 1.5vw);
   font-weight: 600;
+  text-shadow: 1px 2px 1px #111827, 2px 3px 0px #facc15;
 }
 
 /* 
@@ -30,4 +41,8 @@ Colours:
   primary: '#111827',
   secondary: '#374151
 
+*/
+/* Combo 1
+background-color: #e5e7eb;
+background-color: rgb(176, 156, 196);
 */
