--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,13 +1,16 @@
 .Synonyms {
   margin-top: 10px;
-  opacity: 0.9;
+  color: #374151;
+  /* opacity: 0.9; */
 }
 
-.Synonyms span {
-  /* display: inline-block; */
-  /* font-size: 0.9rem; */
-  padding-right: 15px;
-  /* opacity: 0.9; */
+.Synonyms .synonym-words {
+  display: inline-block;
+  padding: 3px 10px;
+  margin: 0 5px;
+  margin-bottom: 5px;
   line-height: 1;
   font-style: oblique;
+  border: 1px solid #374151;
+  border-radius: 10px;
 }
