--- a/src/Meanings.css
+++ b/src/Meanings.css
@@ -1,7 +1,16 @@
 .Meanings h5 {
+  color: #374151;
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1.5;
+}
+
+.Meanings .descriptions {
+  padding-left: 1.5rem;
+}
+
+.Meanings .definition {
+  font-weight: 500;
 }
 
 .Meanings .example {
