--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -7,12 +7,17 @@
     -2px -2px 5px rgba(255, 255, 255, 0.2);
 }
 
+.Dictionary .form {
+  padding: 30px 0;
+}
 .Dictionary h4 {
+  text-align: center;
   margin-bottom: 20px;
+  color: #fff;
 }
 
 .Dictionary input {
-  width: 80%;
+  width: 100%;
   padding: 6px 4px;
   margin-right: 5px;
   border: 2px solid #ddd;
@@ -20,11 +25,12 @@
 }
 
 .Dictionary button {
-  font-size: 1.2rem;
+  width: 100%;
+  font-size: 20px;
   font-weight: 500;
-  padding: 6px 30px;
-  color: #fff;
-  background-color: #065f46;
+  padding: 6px 15px;
+  color: #111827;
+  background-color: #dfebe5;
   transition: all 150ms ease-in-out;
 }
 
@@ -36,5 +42,18 @@
 .Dictionary .hint {
   font-size: 11px;
   margin-top: 5px;
+  color: #fff;
   opacity: 80%;
+}
+
+@media (max-width: 575px) {
+  .Dictionary button {
+    width: 30%;
+    margin-top: 5px;
+    font-size: 18px;
+  }
+
+  .Dictionary h4 {
+    font-size: 1.2rem;
+  }
 }
