--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,15 +1,18 @@
 .Dictionary section {
-  background-color: #fff;
+  background-color: #dfebe5;
   padding: 30px 20px;
   margin: 20px 0;
   border-radius: 8px;
-  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2),
+  /* box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2),
+    -2px -2px 5px rgba(255, 255, 255, 0.2); */
+  box-shadow: 2px 2px 0px rgba(250, 204, 21, 1), 4px 4px 5px rgba(0, 0, 0, 0.3),
     -2px -2px 5px rgba(255, 255, 255, 0.2);
 }
 
 .Dictionary .form {
   padding: 30px 0;
 }
+
 .Dictionary h4 {
   text-align: center;
   margin-bottom: 20px;
@@ -55,5 +58,10 @@
 
   .Dictionary h4 {
     font-size: 1.2rem;
+  }
+
+  .Dictionary section {
+    margin-top: 0;
+    padding: 15px;
   }
 }
