--- a/src/Photos.css
+++ b/src/Photos.css
@@ -1,3 +1,9 @@
 .Photos img {
   margin-bottom: 15px;
 }
+
+@media (max-width: 575px) {
+  .Photos .row .col-6:nth-child(n + 7) {
+    display: none;
+  }
+}
